# repofetch

./: .all-contributorsrc  .editorconfig  .gitattributes  .gitignore  .gitpod.yml  .overcommit.yml  .rubocop.yml  .travis.yml  .yardopts  CHANGELOG.md  CONTRIBUTING.md  CREDITS.md  Cargo.toml  Gemfile  LICENSE  Makefile  README.md  RELEASE_NOTES  Rakefile  repofetch.gemspec
.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh
.github/: dependabot.yml  pull_request_template.md  stale.yml
.github/ISSUE_TEMPLATE/: bug-plugin.yml  bug.yml  bug_report.md  config.yml  documentation-request.md  feature-request.yml  feature_request.md  hacktoberfest.md  plugin-support.yml
.github/workflows/: add-to-project.yml  ci.yml  codeql.yml  pages.yml  release.yml  update-snapshots.yml
exe/: repofetch
graphql/: open-issues.graphql
lib/: repofetch.rb
lib/repofetch/: DEFAULT_CONFIG  bitbucket.rb  bitbucketcloud.rb  cli.rb  config.rb  env.rb  exceptions.rb  github.rb  gitlab.rb  plugin.rb  stat.rb  theme.rb  timespan_stat.rb  util.rb  version.rb
lib/repofetch/bitbucket/: ASCII
lib/repofetch/bitbucketcloud/: stats.rb
lib/repofetch/github/: ASCII
lib/repofetch/gitlab/: ASCII
scripts/: release.sh  serve-coverage.sh
spec/: repofetch_spec.rb  spec_helper.rb
spec/repofetch/: bitbucket_cloud_snapshot_spec.rb  bitbucket_cloud_spec.rb  cli_spec.rb  cli_unix_spec.rb  cli_windows_spec.rb  config_spec.rb  env_spec.rb  github_snapshot_spec.rb  github_spec.rb  gitlab_snapshot_spec.rb  gitlab_spec.rb  plugin_snapshot_spec.rb  plugin_spec.rb  stat_spec.rb  timespan_stat_spec.rb  util_spec.rb
spec/repofetch/__snapshots__/: cli_snapshot_1.snap  cli_stdout_snapshot_1.snap  cli_unix_snapshot_1.snap  cli_windows_snapshot_1.snap  lines_with_ascii_less_ascii_lines.snap  lines_with_ascii_more_ascii_lines.snap  plugin_to_s_less_ascii_lines.snap  plugin_to_s_more_ascii_lines.snap  repofetch_bitbucketcloud_1.snap  repofetch_github_1.snap  repofetch_gitlab_1.snap  repofetch_gitlab_2.snap
src/: cli.rs  emojis.rs  github.rs  main.rs
src/configuration/: ascii.rs  emojis.rs  mod.rs
tapes/: demo.tape  github-plugin.tape  gitlab-plugin.tape
