[package]
name = "repofetch"
version = "0.1.0"
authors = ["Spenser Black <spenserblack01@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Fetch details about your remote repository"
readme = "README.md"
keywords = ["repository", "github"]
categories = ["command-line-utilities"]
repository = "https://github.com/spenserblack/repofetch"
exclude = [
    ".github/*",
    "images/*",
    ".editorconfig",
    ".gitignore",
    ".travis.yml",
    "CHANGELOG.md",
]

[dependencies]
anyhow = "1"
big-bytes = "1"
clap = "2"
colored = "2"
dirs = "3"
futures = "0.3"
github-stats = "0.3"
lazy_static = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
tokio = { version = "0.2", features = ["macros"] }

[dev-dependencies]
unicode-width = "0.1"
