[package]
name = "repofetch"
version = "0.3.2"
authors = ["Spenser Black <spenserblack01@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Fetch details about your remote repository"
readme = "README.md"
keywords = ["repository", "github", "cli"]
categories = ["command-line-utilities"]
repository = "https://github.com/spenserblack/repofetch"
exclude = [
    ".github/*",
    "images/*",
    ".editorconfig",
    ".gitignore",
    ".travis.yml",
    "CHANGELOG.md",
]

[dependencies]
anyhow = "1"
chrono-humanize = "0.2.1"
clap = { version = "3", features = ["cargo", "wrap_help"] }
colored = "2"
dirs = "4"
futures = "0.3"
git2 = { version = "0.15", default-features = false }
humansize = "1"
itertools = "0.10"
lazy_static = "1"
octocrab = "0.17"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
more-asserts = "0.2"
paste = "1"
unicode-width = "0.1"
